--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="mailto: hosannawakawa16@gmail.com"><button>eMAIL&nbsp;<i class="fa-solid fa-envelope" style="color: #000000;"></i></button></a>
                 </div>
                 <div class="social-media">
-                    <span id="linkedin"><a href="https://www.linkedin.com/in/hosanna-wakawa-702193243"><i class="fa-brands fa-linkedin"></i></a></span>                    
+                    <span id="linkedin"><a href="https://https://www.linkedin.com/in/hosanna-isa-wakawa"><i class="fa-brands fa-linkedin"></i></a></span>                    
                     <span id="twitter"><a href="https://twitter.com/hosanna_wakawa?t=OmOvdKYSCgw95_JlQpPbKA&s=09"><i class="fa-brands fa-twitter"></i></a></span>
                 </div>
             </div>
