--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="name"><h1>hosanna isa wakawa</h1></div>
             <div id="profession"><h2>Visual Storyteller</h2></div>
-            <div id="about-services">Blending artistic flair with technical expertise, I craft captivating media illustrations and stories that transport you to serene worlds. As a Communication designer and Computer programmer, I weave together creativity and precision to bring the abstract to reality and inspire new perspectives</p>
+            <div id="about-services">Blending artistic flair with technical expertise, I craft captivating media illustrations and bring to life stories that transport you to serene worlds. As a Communication designer and Computer programmer, I weave together creativity and precision to bring the abstract to reality and inspire new perspectives</p>
                 <div class="message">
                     <a href="sms:+2349161067757"><button>message&nbsp;<i class="fa-solid fa-message" style="color: #000000;"></i></button></a>
                 </div>
